--- a/app/views/will_filter/filter/_conditions_footer.html.erb
+++ b/app/views/will_filter/filter/_conditions_footer.html.erb
@@ -27,6 +27,6 @@
 
   &nbsp;&nbsp;
   <span id="wf_loader" class="spinner" style="display:none;">
-    <%= image_tag 'will_filter/loading.gif', style: 'height: 15px;' %>
+    <%= image_tag 'loading.gif', style: 'height: 15px;' %>
   </span>
 </div>
